# relationformer

./: .gitignore  evaluator.py  pyproject.toml  requirements.txt  test.py  train.py  trainer.py  utils.py
configs/: road_2D.yaml
models/: deformable_detr_backbone.py  relationformer_2D.py
