[tool.poetry]
name = "relationformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
einops = "^0.8.0"
ignite = "^1.1.0"
matplotlib = "^3.10.0"
monai = "^1.4.0"
pyvista = "^0.44.2"
pyyaml = "^6.0.2"
scikit-image = "^0.25.0"
scipy = "^1.14.1"
tensorboardx = "^2.6.2.2"
sknw = "^0.15"
tqdm = "^4.67.1"
pytorch-ignite = "^0.5.1"
tensorboard = "^2.18.0"
modal = "^0.70.1"
svgwrite = "^1.4.3"
rtree = "^1.3.0"
hopcroftkarp = "^1.2.5"
torch = [
    { platform = "darwin", version = "2.5.1", source = "pypi" },
    { platform = "linux", version = "2.5.1+cu124", source = "torch-cu124" }
]

[[tool.poetry.source]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
